Texto da pergunta

--- a/app/src/main/res/layout/question_activity.xml
+++ b/app/src/main/res/layout/question_activity.xml
@@ -11,6 +11,17 @@
     android:gravity="center"
     tools:context="polilibras.com.br.aprendalibras.QuestionActivity">
 
+    <!-- Question -->
+    <TextView
+        android:id="@+id/question_txt"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
+        android:gravity="center_horizontal"
+        android:textSize="20sp"
+        android:text="Que esporte é esse?"
+        />
+
     <!-- Video -->
     <include layout="@layout/video" />
 
