--- a/app/src/main/res/layout/options_imgtype_fragment.xml
+++ b/app/src/main/res/layout/options_imgtype_fragment.xml
@@ -3,25 +3,25 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:gravity="center">
+    android:gravity="center"
+    android:padding="10dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:layout_marginBottom="10dp"
-        android:gravity="center">
+        android:gravity="center"
+        android:orientation="horizontal">
 
         <ImageButton
             android:id="@+id/question_option1_img_btn"
             style="@style/AppTheme.ImageOption"
-            android:layout_weight="1"
+            android:elevation="4dp"
             android:src="@drawable/futebol" />
 
         <ImageButton
             android:id="@+id/question_option2_img_btn"
             style="@style/AppTheme.ImageOption"
-            android:layout_weight="1"
             android:src="@drawable/corrida" />
 
     </LinearLayout>
@@ -30,18 +30,17 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
+        android:orientation="horizontal"
         android:gravity="center">
 
         <ImageButton
             android:id="@+id/question_option3_img_btn"
             style="@style/AppTheme.ImageOption"
-            android:layout_weight="1"
             android:src="@drawable/canoagem" />
 
         <ImageButton
             android:id="@+id/question_option4_img_btn"
             style="@style/AppTheme.ImageOption"
-            android:layout_weight="1"
             android:src="@drawable/tenis" />
 
     </LinearLayout>
