--- a/app/src/main/res/layout/activity_fim_de_jogo.xml
+++ b/app/src/main/res/layout/activity_fim_de_jogo.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,11 +7,23 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:orientation="vertical"
+    android:gravity="center_horizontal"
     tools:context="br.com.polilibras.aprendalibras.FimDeJogoActivity">
     <TextView
         android:id="@+id/fim_jogo_mensagem_txt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/fim_jogo_mensagem"/>
+        android:text="@string/fim_jogo_mensagem"
+        android:textSize="24sp"
+        android:layout_marginTop="50dp"/>
 
-</RelativeLayout>
+    <TextView
+        android:id="@+id/fim_jogo_pontuacao_txt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="24sp"
+        android:text="Sua pontuação é: "
+        />
+
+</LinearLayout>
