--- a/app/src/main/res/layout/activity_fim_de_jogo.xml
+++ b/app/src/main/res/layout/activity_fim_de_jogo.xml
@@ -23,7 +23,31 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="24sp"
-        android:text="Sua pontuação é: "
-        />
+        android:text="Sua pontuação é: " />
 
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <ImageButton
+            android:id="@+id/button_replay"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_replay_white_48dp"
+            android:layout_margin="10dp"
+            android:onClick="sendMessage1"
+            style="@style/AppTheme.TextOption" />
+
+
+        <ImageButton
+            android:id="@+id/button_home"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_home_white_48dp"
+            android:layout_margin="10dp"
+            android:onClick="sendMessage2"
+            style="@style/AppTheme.TextOption"/>
+
+    </LinearLayout>
 </LinearLayout>
