Criar fim de jogo

--- a/app/src/main/res/layout/answer_fragment.xml
+++ b/app/src/main/res/layout/answer_fragment.xml
@@ -35,4 +35,13 @@
         android:textColor="@android:color/white"
         android:padding="10dp" />
 
+    <Button
+        android:id="@+id/fim_de_jogo_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
+        android:text="CONTINUAR >"
+        android:textColor="@android:color/white"
+        android:padding="10dp"/>
+
 </LinearLayout>
