--- a/app/src/main/res/layout/activity_fim_de_jogo.xml
+++ b/app/src/main/res/layout/activity_fim_de_jogo.xml
@@ -1,54 +1,74 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:orientation="vertical"
-    android:gravity="center_horizontal"
-    tools:context="br.com.polilibras.aprendalibras.FimDeJogoActivity">
+    android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/fim_jogo_mensagem_txt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/fim_jogo_perdedor"
-        android:textSize="24sp"
-        android:layout_marginTop="50dp"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center_horizontal"
+        android:orientation="vertical"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        tools:context="br.com.polilibras.aprendalibras.FimDeJogoActivity">
 
-    <TextView
-        android:id="@+id/fim_jogo_pontuacao_txt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="24sp"
-        android:text="Sua pontuação é: " />
+        <TextView
+            android:id="@+id/fim_jogo_mensagem_txt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:text="@string/fim_jogo_perdedor"
+            android:textAllCaps="true"
+            android:textColor="@color/colorPrimary"
+            android:textSize="36sp"
+            android:textStyle="bold" />
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:layout_margin="10dp"
+            android:src="@drawable/vj" />
+
+        <TextView
+            android:id="@+id/fim_jogo_pontuacao_txt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:text="@string/pontuacao_txt"
+            android:textSize="24sp" />
+
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="20dp"
         android:orientation="horizontal">
 
         <ImageButton
             android:id="@+id/button_replay"
+            style="@style/AppTheme.TextOption"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_replay_white_48dp"
             android:layout_margin="10dp"
             android:onClick="sendMessage1"
-            style="@style/AppTheme.TextOption" />
+            android:src="@drawable/ic_replay_white_48dp" />
 
 
         <ImageButton
             android:id="@+id/button_home"
+            style="@style/AppTheme.TextOption"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_home_white_48dp"
             android:layout_margin="10dp"
             android:onClick="sendMessage2"
-            style="@style/AppTheme.TextOption"/>
+            android:src="@drawable/ic_home_white_48dp" />
 
     </LinearLayout>
-</LinearLayout>
+
+</RelativeLayout>
