--- a/app/src/main/res/layout/activity_fim_de_jogo.xml
+++ b/app/src/main/res/layout/activity_fim_de_jogo.xml
@@ -40,6 +40,14 @@
             android:text="@string/pontuacao_txt"
             android:textSize="24sp" />
 
+        <TextView
+            android:id="@+id/recorde_txt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:text="O recorde é de %1$d pontos"
+            android:textSize="24sp"/>
+
     </LinearLayout>
 
     <LinearLayout
