--- a/app/src/main/res/layout/video.xml
+++ b/app/src/main/res/layout/video.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="@dimen/activity_vertical_margin">
 
     <VideoView
         android:id="@+id/video_view"
         android:layout_width="match_parent"
-        android:layout_height="225dp"
-        android:layout_marginBottom="10dp"/>
+        android:layout_height="225dp" />
 
     <ImageButton
         android:id="@+id/video_repeat_btn"
