--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -9,4 +9,12 @@
         <item name="android:background">@android:color/transparent</item>
         <item name="android:elevation">4dp</item>
     </style>
+
+    <style name="AppTheme.SplashStatusBar">
+        <item name="android:windowActionBar">false</item>
+        <item name="windowActionBar">false</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="windowNoTitle">true</item>
+        <item name="android:statusBarColor">@color/orangeBackground</item>
+    </style>
 </resources>
