--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -38,4 +38,14 @@
         android:scaleType="fitCenter"
         android:background="@android:color/transparent"/>
 
+    <!-- sign out button -->
+    <Button
+        android:id="@+id/sign_out_button"
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
+        android:text="Sign Out"
+        android:scaleType="fitCenter"
+        android:visibility="gone"
+        android:layout_alignParentBottom="true"/>
+
 </RelativeLayout>
